// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createChatJobs(options)(thread, segments) add attached file data and info 1`] = `
Array [
  Object {
    "channel": FacebookPage {
      "id": "12345",
      "platform": "facebook",
    },
    "file": Object {
      "data": "_FOO_",
    },
    "key": "fb.12345.67890",
    "request": Object {
      "method": "POST",
      "params": Object {
        "message": Object {
          "attachment": Object {
            "type": "image",
          },
        },
        "recipient": Object {
          "id": "67890",
        },
      },
      "relativeUrl": "me/messages",
    },
  },
  Object {
    "channel": FacebookPage {
      "id": "12345",
      "platform": "facebook",
    },
    "file": Object {
      "assetTag": "BAR!",
      "data": "_BAR_",
      "info": Object {
        "contentType": "image/jpeg",
        "filename": "deathangel.jpg",
        "knownLength": 66666,
      },
    },
    "key": "fb.12345.67890",
    "request": Object {
      "method": "POST",
      "params": Object {
        "message": Object {
          "attachment": Object {
            "type": "file",
          },
        },
        "recipient": Object {
          "id": "67890",
        },
      },
      "relativeUrl": "bar/baz",
    },
  },
]
`;

exports[`createChatJobs(options)(thread, segments) respect options set in job value 1`] = `
Array [
  Object {
    "channel": FacebookPage {
      "id": "12345",
      "platform": "facebook",
    },
    "file": undefined,
    "key": "fb.12345.67890",
    "request": Object {
      "method": "POST",
      "params": Object {
        "message": Object {
          "text": "bibiboo",
        },
        "messaging_type": "MESSAGE_TAG",
        "notification_type": "SILENT_PUSH",
        "persona_id": "astromech-droid",
        "recipient": Object {
          "id": "67890",
        },
        "tag": "POST_PURCHASE_UPDATE",
      },
      "relativeUrl": "me/messages",
    },
  },
  Object {
    "channel": FacebookPage {
      "id": "12345",
      "platform": "facebook",
    },
    "file": undefined,
    "key": "fb.12345.67890",
    "request": Object {
      "method": "POST",
      "params": Object {
        "message": Object {
          "text": "Oh! I apologize.",
        },
        "messaging_type": "UPDATE",
        "notification_type": "REGULAR",
        "persona_id": "protocol-droid",
        "recipient": Object {
          "id": "67890",
        },
        "tag": undefined,
      },
      "relativeUrl": "me/messages",
    },
  },
]
`;

exports[`createChatJobs(options)(thread, segments) respect the empty tag if messaging_type has already been set 1`] = `
Array [
  Object {
    "channel": FacebookPage {
      "id": "12345",
      "platform": "facebook",
    },
    "file": undefined,
    "key": "fb.12345.67890",
    "request": Object {
      "method": "POST",
      "params": Object {
        "message": Object {
          "text": "bibibooboobibooboo",
        },
        "messaging_type": "RESPONSE",
        "notification_type": "SILENT_PUSH",
        "persona_id": "astromech-droid",
        "recipient": Object {
          "id": "67890",
        },
      },
      "relativeUrl": "me/messages",
    },
  },
]
`;

exports[`createChatJobs(options)(thread, segments) with message metadata 1`] = `
Array [
  Object {
    "channel": FacebookPage {
      "id": "12345",
      "platform": "facebook",
    },
    "file": undefined,
    "key": "fb.12345.67890",
    "request": Object {
      "method": "POST",
      "params": Object {
        "persona_id": "your-dearest-friend",
        "recipient": Object {
          "id": "67890",
        },
        "sender_action": "typing_on",
      },
      "relativeUrl": "me/messages",
    },
  },
  Object {
    "channel": FacebookPage {
      "id": "12345",
      "platform": "facebook",
    },
    "file": undefined,
    "key": "fb.12345.67890",
    "request": Object {
      "method": "POST",
      "params": Object {
        "message": Object {
          "id": 1,
        },
        "messaging_type": "MESSAGE_TAG",
        "notification_type": "SILENT_PUSH",
        "persona_id": "your-dearest-friend",
        "recipient": Object {
          "id": "67890",
        },
        "tag": "PAYMENT_UPDATE",
      },
      "relativeUrl": "me/messages",
    },
  },
  Object {
    "channel": FacebookPage {
      "id": "12345",
      "platform": "facebook",
    },
    "file": undefined,
    "key": "fb.12345.67890",
    "request": Object {
      "method": "POST",
      "params": Object {
        "id": 2,
        "recipient": Object {
          "id": "67890",
        },
      },
      "relativeUrl": "bar/baz",
    },
  },
  Object {
    "channel": FacebookPage {
      "id": "12345",
      "platform": "facebook",
    },
    "file": undefined,
    "key": "fb.12345.67890",
    "request": Object {
      "method": "POST",
      "params": Object {
        "message": Object {
          "text": "id:3",
        },
        "messaging_type": "MESSAGE_TAG",
        "notification_type": "SILENT_PUSH",
        "persona_id": "your-dearest-friend",
        "recipient": Object {
          "id": "67890",
        },
        "tag": "PAYMENT_UPDATE",
      },
      "relativeUrl": "me/messages",
    },
  },
  Object {
    "channel": FacebookPage {
      "id": "12345",
      "platform": "facebook",
    },
    "file": undefined,
    "key": "fb.12345.67890",
    "request": Object {
      "method": "POST",
      "params": Object {
        "message": Object {
          "text": "4",
        },
        "messaging_type": "MESSAGE_TAG",
        "notification_type": "SILENT_PUSH",
        "persona_id": "your-dearest-friend",
        "recipient": Object {
          "id": "67890",
        },
        "tag": "PAYMENT_UPDATE",
      },
      "relativeUrl": "me/messages",
    },
  },
]
`;
